test/Fail/InferredLambdaOfNoFunctionType.err
InferredLambdaOfNoFunctionType.agda:19.11-18: error: [UnequalTerms]
(z : _10) → A !=< spec n ≡ impl n
when checking that the expression λ _ → n has type spec n ≡ impl n
